fix dark mode box shadows

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -299,6 +299,11 @@ main a {
   padding: 1.6rem 2.6rem;
 }
 
+/* Styling one class specially in dark mode */
+[data-theme='dark'] .features .feature {
+  box-shadow: 0 1px 2px rgba(248, 246, 246, 0.2),0 3px 8px rgba(252, 251, 251, 0.1);
+}
+
 .feature a {
   font-weight: 500;
 }
